# odl-parser

./: setup.cfg
src/odl_parser/: __init__.py  odl_parser.py
