[metadata]
name = odl-parser
version = 0.0.1
author = John Hedman
author_email = john@developmentseed.org
description = This tool is designed to read ODL (Object Description Language) metadata files and interpret them as a python dictionary.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/developmentseed/odl-parser
project_urls =
    Bug Tracker = https://github.com/developmentseed/odl-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src